--- a/index.html
+++ b/index.html
@@ -4,20 +4,103 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Scanner</title>
-    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script src="https://unpkg.com/html5-qrcode"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+        }
+        #reader {
+            width: 300px;
+            margin: auto;
+        }
+        #result {
+            font-size: 18px;
+            margin-top: 20px;
+        }
+        #winner-box {
+            font-size: 24px;
+            font-weight: bold;
+            color: green;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>QR Code Scanner</h1>
-        <button id="scan-btn">Scan QR Code</button>
-        <div id="result"></div>
-        <button id="winner-btn">Withdraw Winner</button>
-        <div id="winner-result"></div>
-    </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsqr/1.4.0/jsQR.min.js"></script>
-    <script src="script.js"></script>
+    <h1>QR Code Scanner</h1>
+    <input type="file" id="upload" accept=".xlsx">
+    <button onclick="startScanner()">Scan QR Code</button>
+    <div id="reader"></div>
+    <div id="result"></div>
+
+    <button onclick="withdrawWinner()">Withdraw Winner</button>
+    <div id="winner-box"></div>
+
+    <script>
+        let data = [];
+        function loadExcel(event) {
+            let file = event.target.files[0];
+            let reader = new FileReader();
+            reader.readAsBinaryString(file);
+            reader.onload = function(e) {
+                let workbook = XLSX.read(e.target.result, { type: 'binary' });
+                let sheetName = workbook.SheetNames[0];
+                let sheet = XLSX.utils.sheet_to_json(workbook.Sheets[sheetName]);
+                data = sheet.map(row => ({
+                    Name: row.Name,
+                    Mobile: String(row.Mobile),
+                    Agency: row.Agency,
+                    Guests: row.Guests,
+                    Show: "No"
+                }));
+                alert("Excel Data Loaded!");
+            };
+        }
+
+        document.getElementById('upload').addEventListener('change', loadExcel);
+
+        function startScanner() {
+            let scanner = new Html5QrcodeScanner("reader", { fps: 10, qrbox: 250 });
+            scanner.render(onScanSuccess);
+        }
+
+        function onScanSuccess(decodedText) {
+            let found = data.find(item => item.Mobile === decodedText);
+            if (found) {
+                found.Show = "Yes";
+                document.getElementById("result").innerHTML = `
+                    <p><strong>Name:</strong> ${found.Name}</p>
+                    <p><strong>Agency:</strong> ${found.Agency}</p>
+                    <p><strong>Guests:</strong> ${found.Guests}</p>
+                    <p><strong>Status:</strong> Checked In!</p>
+                `;
+            } else {
+                document.getElementById("result").innerHTML = `<p style="color: red;">Not Found</p>`;
+            }
+        }
+
+        function withdrawWinner() {
+            let attendees = data.filter(person => person.Show === "Yes");
+            if (attendees.length === 0) {
+                alert("No attendees to select from!");
+                return;
+            }
+            let index = 0;
+            let interval = setInterval(() => {
+                document.getElementById("winner-box").innerText = attendees[index].Name;
+                index = (index + 1) % attendees.length;
+            }, 100);
+
+            setTimeout(() => {
+                clearInterval(interval);
+                let winner = attendees[Math.floor(Math.random() * attendees.length)];
+                document.getElementById("winner-box").innerText = `Winner: ${winner.Name}`;
+            }, 3000);
+        }
+    </script>
+
 </body>
 </html>
